HLS/Interface_AXI/axi4_ip_hls/axi4_ip_hls/logs/hls_run_csim.log
INFO: [vitis-run 60-1548] Creating build summary session with primary output C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_ip_hls\axi4_ip_hls.hlsrun_csim_summary, at 07/17/24 20:19:17
INFO: [vitis-run 82-31] Launching vitis_hls: vitis_hls -nolog -run csim -work_dir C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_ip_hls -config C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg -cmdlineconfig C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_ip_hls/hls/config.cmdline
INFO: [HLS 200-10] For user 'renan' on host 'desktop-k5rpcpk' (Windows NT_amd64 version 10.0) on Wed Jul 17 20:19:20 -0300 2024
INFO: [HLS 200-10] In directory 'C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls'
INFO: [HLS 200-2005] Using work_dir C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_ip_hls 
INFO: [HLS 200-1505] Using default flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
WARNING: [HLS 200-2001] file not found 'C:\Users\renan\Documents\Processadores\HLS\Interface_AXI\axi4_lite.hh' see [hls] from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(10)
WARNING: [HLS 200-2001] file not found 'C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip.h' see [hls] from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(12)
INFO: [HLS 200-1465] Applying ini 'syn.file=C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip.cpp' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(11)
INFO: [HLS 200-10] Adding design file 'C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'syn.file=C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip.h' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(12)
WARNING: [HLS 200-40] Cannot find design file 'C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip.h'
INFO: [HLS 200-1465] Applying ini 'syn.file=C:\Users\renan\Documents\Processadores\HLS\Interface_AXI\axi4_lite.h' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(13)
INFO: [HLS 200-10] Adding design file 'C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_lite.h' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/testbench.cpp' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(9)
INFO: [HLS 200-10] Adding test bench file 'C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/testbench.cpp' to the project
INFO: [HLS 200-1465] Applying ini 'tb.file=C:\Users\renan\Documents\Processadores\HLS\Interface_AXI\axi4_lite.hh' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(10)
WARNING: [HLS 200-40] Cannot find test bench file 'C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_lite.hh'
INFO: [HLS 200-1465] Applying ini 'syn.top=nmp_axi4l_ip' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(14)
INFO: [HLS 200-1465] Applying ini 'flow_target=vivado' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(4)
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see docs.xilinx.com/access/sources/dita/topic?Doc_Version=2024.1%20English&url=ug1448-hls-guidance&resourceid=200-1505.html
INFO: [HLS 200-1465] Applying ini 'part=xc7z007sclg225-2' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(1)
INFO: [HLS 200-1611] Setting target device to 'xc7z007s-clg225-2'
INFO: [HLS 200-1465] Applying ini 'clock=100MHz' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(7)
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1465] Applying ini 'clock_uncertainty=1ns' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(8)
INFO: [SYN 201-201] Setting up clock 'default' with an uncertainty of 1ns.
INFO: [HLS 200-1465] Applying ini 'csim.code_analyzer=1' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(15)
INFO: [HLS 200-1465] Applying ini 'package.output.format=ip_catalog' from C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_config.cfg(5)
WARNING: [HLS 200-1998] cannot find relative file path '../../../axi4_lite.hh' in directory(s): C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls/axi4_ip_hls/solution C:/Users/renan/Documents/Processadores/HLS/Interface_AXI/axi4_ip_hls
INFO: [SIM 211-200] Executing Code Analyzer instead of classic HLS C simulation
INFO: [SIM 211-200] Compiling source code ../axi4_ip.cpp as hardware code with instrumentation
INFO: [SIM 211-200] Compiling source code ../testbench.cpp as test bench code with instrumentation
INFO: [SIM 211-200] Compiling source code ../axi4_ip.cpp as test bench code with instrumentation
In file included from ../axi4_ip.cpp:1:
In file included from ../axi4_lite.h:6:
../assert.h:4:9: warning: 'assert' macro redefined [-Wmacro-redefined]
#define assert(expression) ((void)0)
        ^
C:\Xilinx\Vitis_HLS\2024.1\tps\mingw\10.0.0\win64.o\nt/x86_64-w64-mingw32/include/assert.h:50:9: note: previous definition is here
#define assert(_Expression) \
        ^
1 warning generated.
In file included from ../testbench.cpp:1:
In file included from ../axi4_lite.h:6:
../assert.h:4:9: warning: 'assert' macro redefined [-Wmacro-redefined]
#define assert(expression) ((void)0)
        ^
C:\Xilinx\Vitis_HLS\2024.1\tps\mingw\10.0.0\win64.o\nt/x86_64-w64-mingw32/include/assert.h:50:9: note: previous definition is here
#define assert(_Expression) \
        ^
1 warning generated.
In file included from ../axi4_ip.cpp:1:
In file included from ../axi4_lite.h:6:
../assert.h:4:9: warning: 'assert' macro redefined [-Wmacro-redefined]
#define assert(expression) ((void)0)
        ^
C:\Xilinx\Vitis_HLS\2024.1\tps\mingw\10.0.0\win64.o\nt/x86_64-w64-mingw32/include/assert.h:50:9: note: previous definition is here
#define assert(_Expression) \
        ^
1 warning generated.
INFO: [SIM 211-200] Linking hardware code
INFO: [SIM 211-200] Transforming hardware bitcode
INFO: [SIM 211-200] Linking executable
INFO: [SIM 211-200] Determining source code dependencies
INFO: [SIM 211-200] Generating static call graph
INFO: [SIM 211-200] Analyzing Interfaces
slxcmd:0:0: error: No such file 'C:\\Users\\renan\\Documents\\Processadores\\axi4_lite.hh'. Required to run 'copy C:\Users\renan\Documents\Processadores\axi4_lite.hh to C:\Users\renan\Documents\Processadores\HLS\Interface_AXI\axi4_ip_hls\axi4_ip_hls\hls\csim\code_analyzer\tracing\csim\build'
ERROR: [SIM 211-200] Code Analyzer execution failed. Consider running the classic C simulation instead by disabling the hls.csim.code_analyzer option in the config file.
ERROR: Problem running csim: child process exited abnormally
INFO: [HLS 200-112] Total CPU user time: 1 seconds. Total CPU system time: 0 seconds. Total elapsed time: 17.259 seconds; peak allocated memory: 174.676 MB.
